basic Structure, TODOs, (most of) Title page

--- a/main.tex
+++ b/main.tex
@@ -10,13 +10,14 @@
 % TODO: change thesis information
 \newcommand*{\getUniversity}{Technische Universität München}
 \newcommand*{\getFaculty}{Department of Informatics}
-\newcommand*{\getTitle}{Thesis title}
-\newcommand*{\getTitleGer}{Titel der Abschlussarbeit}
-\newcommand*{\getAuthor}{Author}
-\newcommand*{\getDoctype}{Thesis type (Bachelor's Thesis in Informatics, Master's Thesis in Robotics, \ldots)}
-\newcommand*{\getSupervisor}{Supervisor}
-\newcommand*{\getAdvisor}{Advisor}
-\newcommand*{\getSubmissionDate}{Submission date}
+\newcommand*{\getTitle}{Combatting the Precision Loss of Partial Contexts in Abstract Interpretation}
+% TODO: PräzisionsverlustES? Präzisionsverlust laut Anmeldeformluar
+\newcommand*{\getTitleGer}{Bekämpfung des Präzisionsverlust durch partielle Kontexte in Abstrakter Interpretation}
+\newcommand*{\getAuthor}{Felix Sebastian Krayer}
+\newcommand*{\getDoctype}{Bachelor's Thesis in Informatics}
+\newcommand*{\getSupervisor}{Supervisor} % TODO: Supervisor
+\newcommand*{\getAdvisor}{Advisor} % TODO: Advisor
+\newcommand*{\getSubmissionDate}{15th of February 2023}
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \begin{document}
@@ -39,7 +40,10 @@
 \mainmatter{}
 
 \input{chapters/01_introduction}
-% TODO: add more chapters here
+\input{chapters/02_background}
+\input{chapters/03_mainContributions}
+\input{chapters/04_evaluation}
+\input{chapters/05_conclusion}
 
 \appendix{}
 
