structure and typos

--- a/settings.tex
+++ b/settings.tex
@@ -51,6 +51,8 @@
 \definecolor{TUMAccentLightBlue}{HTML}{98C6EA}
 \definecolor{TUMAccentBlue}{HTML}{64A0C8}
 
+\newcommand{\Gob} {\textsc{Goblint} }
+
 % Settings for pgfplots
 \pgfplotsset{compat=newest}
 \pgfplotsset{
