structure and a bit of background

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,7 @@
-@book{latex,
-  title = {LaTeX : A Documentation Preparation System User's Guide and Reference Manual},
-  publisher = {Addison-Wesley Professional},
-  year = {1994},
-  author = {Leslie Lamport}
+@book{rival2020introduction,
+  title={Introduction to static analysis: an abstract interpretation perspective},
+  author={Rival, Xavier and Yi, Kwangkeun},
+  year={2020},
+  publisher={Mit Press}
 }
 
