--- a/settings.tex
+++ b/settings.tex
@@ -59,9 +59,12 @@
 
 % Settings for lstlistings
 \lstset{%
+  numbers=left,
+  %frame=single,
   basicstyle=\ttfamily,
   columns=fullflexible,
   autogobble,
   keywordstyle=\bfseries\color{TUMBlue},
-  stringstyle=\color{TUMAccentGreen}
+  stringstyle=\color{TUMAccentGreen},
+  commentstyle=\color{TUMAccentGreen}
 }
