--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,10 @@
 \input{chapters/05_conclusion}
 
 \appendix{}
+Abbreviations % TODO: Abbreviations
+\begin{itemize}
+  \item CFG
+\end{itemize}
 
 \microtypesetup{protrusion=false}
 \listoffigures{}
