--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \newcommand*{\getSupervisor}{Supervisor} % TODO: Supervisor
 \newcommand*{\getAdvisor}{Advisor} % TODO: Advisor
 \newcommand*{\getSubmissionDate}{15th of February 2023}
+\newcommand*{\getSubmissionLocation}{Munich}
 
 \begin{document}
 
