fixes and some WIP points

--- a/main.tex
+++ b/main.tex
@@ -2,14 +2,12 @@
 
 \RequirePackage[l2tabu,orthodox]{nag}
 
-% TODO: decide if one-sided/two-sided
 %\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
 \documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook} % one-sided
 
 % TODO: change citation style in settings
 \input{settings}
 
-% TODO: change thesis information
 \newcommand*{\getUniversity}{Technische Universität München}
 \newcommand*{\getFaculty}{Informatics}
 \newcommand*{\getSchool}{Computation, Information and Technology}
@@ -18,8 +16,8 @@
 \newcommand*{\getTitleGer}{Bekämpfung des Präzisionsverlust durch partielle Kontexte in Abstrakter Interpretation}
 \newcommand*{\getAuthor}{Felix Sebastian Krayer}
 \newcommand*{\getDoctype}{Bachelor's Thesis}
-\newcommand*{\getSupervisor}{Supervisor} % TODO: Supervisor
-\newcommand*{\getAdvisor}{Advisor} % TODO: Advisor
+\newcommand*{\getSupervisor}{Prof. Dr. Helmut Seidl}
+\newcommand*{\getAdvisor}{Michael Schwarz}
 \newcommand*{\getSubmissionDate}{15th of February 2023}
 \newcommand*{\getSubmissionLocation}{Munich}
 
