--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,3 +5,18 @@
   publisher={Mit Press}
 }
 
+@inproceedings{apinis2012side,
+  title={Side-effecting constraint systems: a swiss army knife for program analysis},
+  author={Apinis, Kalmer and Seidl, Helmut and Vojdani, Vesal},
+  booktitle={Asian Symposium on Programming Languages and Systems},
+  pages={157--172},
+  year={2012},
+  organization={Springer}
+}
+
+@phdthesis{apinis2014frameworks,
+  title={Frameworks for analyzing multi-threaded C},
+  author={Apinis, Kalmer},
+  year={2014},
+  school={Technische Universit{\"a}t M{\"u}nchen}
+}
