--- a/settings.tex
+++ b/settings.tex
@@ -103,6 +103,6 @@
   autogobble,
   keywordstyle=\bfseries\color{TUMBlue},
   stringstyle=\color{TUMAccentGreen},
-  commentstyle=\color{TUMAccentGreen}
-  captionpos=b
+  commentstyle=\color{TUMAccentGreen},
+  captionpos=b,
 }
