--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
 	\itemsep-.25\baselineskip
 	\acro{TUM}[TUM]{Technical University of Munich}
 	\acro{CFG}[CFG]{Control flow Graph}
+	\acro{lval}[\textsf{lval}]{Left Value (of an assignment)}
 	% TODO: add acronyms
 \end{acronym}
 
