background (almost) done

--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,7 @@
 \newcommand*{\getFaculty}{Informatics}
 \newcommand*{\getSchool}{Computation, Information and Technology}
 \newcommand*{\getTitle}{Combatting the Precision Loss of Partial Contexts in Abstract Interpretation}
-% TODO: PräzisionsverlustES? Präzisionsverlust laut Anmeldeformluar
-\newcommand*{\getTitleGer}{Bekämpfung des Präzisionsverlust durch partielle Kontexte in Abstrakter Interpretation}
+\newcommand*{\getTitleGer}{Bekämpfung des Präzisionsverlustes durch partielle Kontexte in Abstrakter Interpretation}
 \newcommand*{\getAuthor}{Felix Sebastian Krayer}
 \newcommand*{\getDoctype}{Bachelor's Thesis}
 \newcommand*{\getSupervisor}{Prof. Dr. Helmut Seidl}
