some idk progress in eval

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -20,3 +20,29 @@
   year={2014},
   school={Technische Universit{\"a}t M{\"u}nchen}
 }
+
+@misc{svBench,
+  title = {SV-Benchmarks},
+  author = {sosy-lab},
+  organization = {sosy-lab},
+  howpublished = {\url{https://gitlab.com/sosy-lab/benchmarking/sv-benchmarks/-/tree/3d3b5d7d91b78f49e6cc3874002d23fdc4b3d1b4}},
+  note = {Last Accessed: 2023-02-01}
+}
+
+@misc{gnuCoreutils,
+  title = {Coreutils - GNU core utilities},
+  author = {GNU},
+  organization = {GNU Operating System},
+  howpublished = {\url{https://www.gnu.org/software/coreutils/}},
+  note = {Last Accessed: 2023-02-01}
+}
+
+@misc{goblintBench,
+  title = {Goblint benchmark suite},
+  author = {Goblint},
+  organization = {Goblint},
+  howpublished = {\url{https://github.com/goblint/bench/tree/57cfb3d93e3414527d5a24d30af48242a1e6f1eb}},
+  note = {Last Accessed: 2023-02-01}
+}
+
+
