--- a/bibliography.bib
+++ b/bibliography.bib
@@ -21,6 +21,13 @@
   school={Technische Universit{\"a}t M{\"u}nchen}
 }
 
+@article{schwarz2023clustered,
+  title={Clustered Relational Thread-Modular Abstract Interpretation with Local Traces},
+  author={Schwarz, Michael and Saan, Simmo and Seidl, Helmut and Erhard, Julian and Vojdani, Vesal},
+  journal={arXiv preprint arXiv:2301.06439},
+  year={2023}
+}
+
 @misc{svBench,
   title = {SV-Benchmarks},
   author = {sosy-lab},
