--- a/bibliography.bib
+++ b/bibliography.bib
@@ -36,6 +36,13 @@
   note = {Last Accessed: 2023-02-01}
 }
 
+@misc{svBenchCoreutils,
+  title = {sv-benchmarks/c/goblint-coreutils/README.txt},
+  author = {Julian Erhard},
+  howpublished = {\url{https://gitlab.com/sosy-lab/benchmarking/sv-benchmarks/-/blob/9930354ef471336665f94a756e07755b52158f74/c/goblint-coreutils/README.txt}},
+  note = {Last Accessed: 2023-02-01}
+}
+
 @misc{gnuCoreutils,
   title = {Coreutils - GNU core utilities},
   author = {GNU},
