--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,10 @@
+@book{cousot2021principles,
+  title={Principles of Abstract Interpretation},
+  author={Cousot, Patrick},
+  year={2021},
+  publisher={MIT Press}
+}
+
 @book{rival2020introduction,
   title={Introduction to static analysis: an abstract interpretation perspective},
   author={Rival, Xavier and Yi, Kwangkeun},
@@ -48,6 +55,14 @@
   author = {GNU},
   organization = {GNU Operating System},
   howpublished = {\url{https://www.gnu.org/software/coreutils/}},
+  note = {Last Accessed: 2023-02-01}
+}
+
+@misc{goblintHome,
+  title = {Goblint - A static analyzer for multi-threaded C programs, specializing in finding concurrency bugs},
+  author = {Goblint},
+  organization = {Goblint},
+  howpublished = {\url{https://goblint.in.tum.de/home}},
   note = {Last Accessed: 2023-02-01}
 }
 
