--- a/settings.tex
+++ b/settings.tex
@@ -27,6 +27,7 @@
 \usepackage[printonlyused]{acronym}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{subcaption}
 \AtBeginDocument{%
 	\hypersetup{
