progress in intro and thread

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -66,6 +66,14 @@
   note = {Last Accessed: 2023-02-01}
 }
 
+@misc{goblintCil,
+  title = {C Intermediate Language (CIL)},
+  author = {Cil},
+  organization = {Goblint},
+  howpublished = {\url{https://github.com/goblint/cil}},
+  note = {Last Accessed: 2023-02-01}
+}
+
 @misc{goblintBench,
   title = {Goblint benchmark suite},
   author = {Goblint},
