--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
 \input{chapters/03_precisionLossVariableAnalyses}
 \input{chapters/04_precisionLossThreadAnalyses}
 \input{chapters/05_evaluation}
-\input{chapters/06_conclusion}
+\input{chapters/06_conclusions}
 
 \appendix{}
 
