--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 %\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
 \documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook} % one-sided
 
-% TODO: change citation style in settings
+% change citation style in settings
 \input{settings}
 
 \newcommand*{\getUniversity}{Technische Universität München}
@@ -46,21 +46,19 @@
 \input{chapters/05_evaluation}
 \input{chapters/06_conclusions}
 
-\appendix{}
+%\appendix{}
 
 \microtypesetup{protrusion=false}
 
-\addchap{Abbreviations}
-\begin{acronym}
-	\itemsep-.25\baselineskip
-	\acro{TUM}[TUM]{Technical University of Munich}
-	\acro{CFG}[CFG]{Control flow Graph}
-	\acro{lval}[\textsf{lval}]{Left Value (of an assignment)}
-	% TODO: add acronyms
-\end{acronym}
+%\addchap{Abbreviations}
+%\begin{acronym}
+%	\itemsep-.25\baselineskip
+%	\acro{CFG}[CFG]{Control flow Graph}
+%	\acro{lval}[$\textsf{lval}$]{Left Value (of an assignment)}
+%\end{acronym}
 
 \listoffigures{}
-\listoftables{}
+%\listoftables{}
 \microtypesetup{protrusion=true}
 \printbibliography{}
 
