--- a/bibliography.bib
+++ b/bibliography.bib
@@ -35,6 +35,7 @@
   year={2023}
 }
 
+% Sites/Repositories
 @misc{svBench,
   title = {SV-Benchmarks},
   author = {sosy-lab},
@@ -82,8 +83,58 @@
   note = {Last Accessed: 2023-02-01}
 }
 
-@misc{TODO,
-  title = {TODO},
-  author = {TODO},
+%Related Work
+@inproceedings{smaragdakis2014introspective,
+  title={Introspective analysis: context-sensitivity, across the board},
+  author={Smaragdakis, Yannis and Kastrinis, George and Balatsouras, George},
+  booktitle={Proceedings of the 35th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages={485--495},
+  year={2014}
+}
+
+@inproceedings{li2018scalability,
+  title={Scalability-first pointer analysis with self-tuning context-sensitivity},
+  author={Li, Yue and Tan, Tian and M{\o}ller, Anders and Smaragdakis, Yannis},
+  booktitle={Proceedings of the 2018 26th ACM joint meeting on european software engineering conference and symposium on the foundations of software engineering},
+  pages={129--140},
+  year={2018}
+}
+
+@article{li2020principled,
+  title={A principled approach to selective context sensitivity for pointer analysis},
+  author={Li, Yue and Tan, Tian and M{\o}ller, Anders and Smaragdakis, Yannis},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={42},
+  number={2},
+  pages={1--40},
+  year={2020},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{lu2019precision,
+  title={Precision-preserving yet fast object-sensitive pointer analysis with partial context sensitivity},
+  author={Lu, Jingbo and Xue, Jingling},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={3},
+  number={OOPSLA},
+  pages={1--29},
+  year={2019},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{thakur2019compare,
+  title={Compare less, defer more: Scaling value-contexts based whole-program heap analyses},
+  author={Thakur, Manas and Nandivada, V Krishna},
+  booktitle={Proceedings of the 28th International Conference on Compiler Construction},
+  pages={135--146},
+  year={2019}
+}
+
+@inproceedings{oh2014selective,
+  title={Selective context-sensitivity guided by impact pre-analysis},
+  author={Oh, Hakjoo and Lee, Wonchan and Heo, Kihong and Yang, Hongseok and Yi, Kwangkeun},
+  booktitle={Proceedings of the 35th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages={475--484},
+  year={2014}
 }
 
