--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 
 \input{pages/title}
 \input{pages/disclaimer}
-\input{pages/acknowledgments}
+%\input{pages/acknowledgments}
 \input{pages/abstract}
 \microtypesetup{protrusion=false}
 \tableofcontents{}
@@ -53,7 +53,7 @@
 %\addchap{Abbreviations}
 %\begin{acronym}
 %	\itemsep-.25\baselineskip
-%	\acro{CFG}[CFG]{Control flow Graph}
+%	\acro{CFG}[CFG]{Control Flow Graph}
 %	\acro{lval}[$\textsf{lval}$]{Left Value (of an assignment)}
 %\end{acronym}
 
