--- a/settings.tex
+++ b/settings.tex
@@ -41,8 +41,8 @@
 	\def\lstnumberautorefname{Line}
 	\def\chapterautorefname{Chapter}
 	\def\sectionautorefname{Section}
-	\def\subsectionautorefname{Subsection}
-	\def\subsubsectionautorefname{Subsubsection}
+	\def\subsectionautorefname{Section}
+	\def\subsubsectionautorefname{Section}
 }
 
 \addto\extrasngerman{
