--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,9 @@
 %\input{pages/acknowledgments}
 \input{pages/abstract}
 \microtypesetup{protrusion=false}
-\tableofcontents{}
+\begin{spacing}{0.96}
+\tableofcontents
+\end{spacing}
 \microtypesetup{protrusion=true}
 
 \mainmatter{}
