--- a/settings.tex
+++ b/settings.tex
@@ -28,6 +28,7 @@
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{setspace}
 \usepackage{subcaption}
 \AtBeginDocument{%
 	\hypersetup{
@@ -36,6 +37,8 @@
 	}
 }
 \usepackage{ifthen}
+
+\usetikzlibrary{positioning}
 
 \addto\extrasamerican{
 	\def\lstnumberautorefname{Line}
