--- a/bibliography.bib
+++ b/bibliography.bib
@@ -79,7 +79,7 @@
   title = {Goblint benchmark suite},
   author = {Goblint},
   organization = {Goblint},
-  howpublished = {\url{https://github.com/goblint/bench/tree/master}},
+  howpublished = {\url{https://github.com/goblint/bench}},
   note = {Last Accessed: 2023-02-01}
 }
 
